--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="video.movie">
-  <meta property="og:url" content="https://unacceptable.djstomp.repl.co/">
+  <meta property="og:url" content="https://lemon.djstomp.net">
   <meta property="og:title" content="Unacceptable!">
   <meta property="og:description" content="Unacceptable!">
   <meta property="og:image" content="https://i.imgur.com/aEbcP3k.png">
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://unacceptable.djstomp.repl.co/">
+  <meta property="twitter:url" content="https://lemon.djstomp.net">
   <meta property="twitter:title" content="Unacceptable!">
   <meta property="twitter:description" content="Unacceptable!">
   <meta property="twitter:image" content="https://i.imgur.com/aEbcP3k.png">
